--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mensagem Especial</title>
+    <title>Melhorando seu dia</title>
     <style>
         body {
             display: flex;
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="mensagem" id="mensagem">
-        <h1>Olá, Meu Amor!</h1>
+        <h1>Bom dia, Gata!</h1>
         <p id="texto-mensagem">Espero que você esteja tendo um dia maravilhoso. Lembre-se de que você é muito especial para mim e eu te amo muito!</p>
         <div class="data-hora" id="data-hora">
             <!-- A data e hora serão exibidas aqui -->
