--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
 
     <script>
         const mensagens = [
-            "Espero que você esteja tendo um dia maravilhoso. Lembre-se de que você é muito especial para mim e eu te amo muito!",
-            "Você é a luz da minha vida. Tenha um dia incrível!",
-            "Cada momento com você é uma bênção. Te amo muito!",
-            "Você faz meu coração bater mais forte. Tenha um ótimo dia!",
-            "Estou pensando em você e sorrindo. Te amo mais do que palavras podem dizer!"
+            "Você é a minha inspiração para ser a melhor versão de mim memso, a razão do meu sorriso mais sincero e o amor da minha vida. Te amo mais do que as palavras poderiam expressar. Amo você!",
+            "Cada momento ao seu lado é uma dádiva que faço questão de aproveitar ao máximo possível. Você faz meu mundo mais bonito e minha vida muito mais feliz. Amo você!",
+            "Você é a melhor parte de minha vida, é a representação de toda a minha felicidade e prazer de viver. Eu te amo com todo o meu coração.",
+            "Como ser humano eu nasci como um livro com todas as páginas em branco, e o nosso amor é a mais bela história que eu poderia ter escrito nele. Amo você!",
+            "Eu não sei que dia nem que horas você está vendo essa mensagem, mas uma coisa eu posso te garantir, eu estou pensando em você nesse exato momento pois você nunca deixa meus pensamentos. Amo você!",
+            "Quando você está ao meu lado, todos os problemas perdem a importância e o mundo parece um lugar melhor. Você é a minha paz. Amo você!",
+            "Se fosse pra brincar de defina, você seria minha felicidade, meu sonho, meu desejo, minha paixão, minha paz e meu amor. Amo você infinitamente!",
+            "Amo cada pedacinho de você, cada detalhe, cada sorriso, cada gesto, cada toque, cada olhar, cada abaraço e cada beijo. Você é meu tudo e sou o homem mais feliz do planeta por isso. Amo você!",
         ];
 
         function exibirMensagemAleatoria() {
