--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <script>
         const mensagens = [
-            "Você é a minha inspiração para ser a melhor versão de mim memso, a razão do meu sorriso mais sincero e o amor da minha vida. Te amo mais do que as palavras poderiam expressar. Amo você!",
+            "Você é a minha inspiração para ser a melhor versão de mim mesmo, a razão do meu sorriso mais sincero e o amor da minha vida. Te amo mais do que as palavras poderiam expressar. Amo você!",
             "Cada momento ao seu lado é uma dádiva que faço questão de aproveitar ao máximo possível. Você faz meu mundo mais bonito e minha vida muito mais feliz. Amo você!",
             "Você é a melhor parte de minha vida, é a representação de toda a minha felicidade e prazer de viver. Eu te amo com todo o meu coração.",
             "Como ser humano eu nasci como um livro com todas as páginas em branco, e o nosso amor é a mais bela história que eu poderia ter escrito nele. Amo você!",
